--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <title>Bootstrap ex</title>
+    <title>Bootstrap exercise</title>
   </head>
   <body>
     <!-- navbar -->
